finished photo-content block

--- a/portfolio/photo-studia/index.html
+++ b/portfolio/photo-studia/index.html
@@ -37,8 +37,8 @@
 
 		</header>
 		<main class="main">
-			<div class="photo-content photo-content_theme_beach">
-				<div class="photo-content__wrapper">
+			<div class="photo-content ">
+				<div class="photo-content__wrapper photo-content_theme_beach">
 					<div class="photo-content__inner main-offer">
 						<p class="main-offer__subtitle">Photographer & Filmmaker</p>
 						<h1 class="main-offer__title">Aperture Studios</h1>
