block  what-we-do and photo-content-sunset-theme

--- a/portfolio/photo-studia/index.html
+++ b/portfolio/photo-studia/index.html
@@ -42,7 +42,10 @@
 					<div class="photo-content__inner main-offer">
 						<p class="main-offer__subtitle">Photographer & Filmmaker</p>
 						<h1 class="main-offer__title">Aperture Studios</h1>
-						<p class="main-offer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+						<p class="main-offer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+							varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor
+							interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id
+							rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
 					</div>
 					<div class="photo-content__row">
 						<div class="photo-content__exposure">1/2000s</div>
@@ -52,7 +55,49 @@
 					</div>
 				</div>
 			</div>
+			<div class="what-we-do">
+				<h2 class="what-we-do_title">What we do.</h2>
+				<div class="what-we-do_subtitle">The areas that we're specialized in.</div>
+				<div class="what-we-do_items">
+					<div class="what-we-do__item what-we-do__item_bg-product">
+						<div class="what-we-do__inner-title">Product Photography</div>
+						<div class="what-we-do__inner-text">Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+						<a class="btn" href="">Read more</a>
+					</div>
+					<div class="what-we-do__item what-we-do__item_bg-arch">
+						<div class="what-we-do__inner-title">Architecture Photography</div>
+						<div class="what-we-do__inner-text">Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</div>
+						<a class="btn" href="">Read more</a>
+					</div>
+					<div class="what-we-do__item what-we-do__item_bg-drone">
+						<div class="what-we-do__inner-title">Drone Photography</div>
+						<div class="what-we-do__inner-text">Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</div>
+						<a class="btn" href="">Read more</a>
+					</div>
+					<div class="what-we-do__item what-we-do__item_bg-wild">
+						<div class="what-we-do__inner-title">Wildlife Photography</div>
+						<div class="what-we-do__inner-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</div>
+						<a class="btn" href="#">Read more</a>
+					</div>
+				</div>
 
+
+
+			</div>
+			<div class="photo-content ">
+				<div class="photo-content__wrapper photo-content_theme_sunset">
+					<div class="photo-content__inner offer">
+						<div class="offer__title">Sunset at Mount Fuji</div>
+						<div class="offer__text">Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</div>
+					</div>
+					<div class="photo-content__row">
+						<div class="photo-content__exposure">1''</div>
+						<div class="photo-content__membrane">f/16</div>
+						<div class="photo-content__iso">400</div>
+						<div class="photo-content__location">Japan</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 
